GNOME Bugzilla – Bug 647646
Keyboard layout preview window gets spanned over multiple screens
Last modified: 2011-06-11 12:49:39 UTC
Created attachment 185862 [details] "Huge" window Description of problem: When opening Keyboard layout preview window on multiscreen setup, the windows get hidiously huge and spanned over multiple screens. See two screenshots where "normal" is taken with no external screen attached and "huge" is taken with one external screen. Version-Release number of selected component (if applicable): control-center-3.0.0.1-3.fc15.x86_64 How reproducible: 100% Steps to Reproduce: 1. Obtain multiscreen setup with screens on left-right. 2. Press Alt+F2, type "gnome-control-center region" and press Enter key. 3. Go to "Layouts" tab. 4. Select some layout from the list and press the button with gear image below. Actual results: Preview window gets spanned over both screens. Expected results: Same as in one screen setup.
Created attachment 185863 [details] "Normal" window
That's a bug libgnomekbd.
Currently, the preferred width of the window is 3/4 of the screen width. Will use the current monitor's parameters.
*** Bug 648582 has been marked as a duplicate of this bug. ***
Committed. Using primary monitor. Please check.
Checked on lastest commit from gnome GIT repository. Size is ok, but layout preview windows always appears on primary monitor (even when window with preferences is on other monitor). Is that correct behaviour? I checked other windows in gnome-control-center and they all launch new windows on current monitor, not primary.
*** Bug 649376 has been marked as a duplicate of this bug. ***
I am not sure how to obtain the "current" monitor. The preview is a separate application, independent of g-c-c. So I cannot even ask g-c-c which monitor to use...
Wouldn't it be then possible to just spawn the window on the same monitor, where the cursor is present? I think a lot of other applications does it like that.
http://git.gnome.org/browse/libgnomekbd/commit/?id=fc9f4a8f558ab93e1cd734ba41bc3268b8b1be2b Radek, could you please check if that works for you?