Using primary monitor screen size, not the screen size

Using large screens can cause bad, huge, windows
http://bugzilla.gnome.org/show_bug.cgi?id=647646